implemented add and update owner - closes #52